@@ -1,5 +1,11 @@
 2010-06-21  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor.Tests/VirtualSpacesTests.cs: Added test for
+	  'Bug 615624 - Pressing DOWN after RETURN moves cursor to
+	  beginning of blank lines instead of to the indent'.
+
+2010-06-21  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
 	  test for 'Bug 615702 - In-place variable renaming can't
 	  rename foreach loop variables'.
